overflow and font fixed

--- a/css/tailwind.css
+++ b/css/tailwind.css
@@ -126,9 +126,9 @@ input[type="number"] {
 }
 
 .open-btn {
-  position: fixed;
-  top: 10px;
-  right: 10px;
+  position: absolute;
+  top: 1.5rem;
+  right: 1rem;
   opacity: 1;
   transition: opacity 0.4s ease;
 }
@@ -263,6 +263,9 @@ input[type="number"] {
   .btn-cta:hover {
     transform: scale(1.2);
     transition: transform 0.4s ease;
+  }
+
+  .nav-main {
   }
 }
 
